--- a/css_exercise/flex_exercise/6.example.html
+++ b/css_exercise/flex_exercise/6.example.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div>
-        <input type="text">
+        ID: <input type="text" name="" id="">
+        PW: <input type="password" name="" id="">
     </div>
 </body>
 </html>
