modified:   css_exercise/flex_exercise/6.example.html

--- a/css_exercise/flex_exercise/6.example.html
+++ b/css_exercise/flex_exercise/6.example.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        input {
+            outline: none;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        ID: <input type="text" name="" id="">
-        PW: <input type="password" name="" id="">
-    </div>
+    <form action="">
+        <fieldset>
+            <legend>login</legend>
+                ID: <input type="text" name="" id="" placeholder="아이디 입력"> <br>
+                PW: <input type="password" name="" id="">
+        </fieldset>
+    </form>
 </body>
 </html>
