modified:   responsive-web/4.CSS_Gridsystem3.html 	new file:   responsive-web/5.CSS_Navigator.html 	new file:   responsive-web/6.Responsive-Web.html 	new file:   responsive-web/img/PC_Page.png 	new file:   responsive-web/img/mobile.png 	new file:   responsive-web/img/responsiveweb.jpeg 	new file:   responsive-web/img/secure_coding.jpg 	new file:   responsive-web/img/web.png

--- a/responsive-web/4.CSS_Gridsystem3.html
+++ b/responsive-web/4.CSS_Gridsystem3.html
@@ -32,7 +32,7 @@
         <div class="header row">
             <div class="col-md-3 col-sm-4 col-12">Logo</div>
             <div class="col-md-7 col-sm-8 col-12">Search</div>
-            <div class="col-md-2">Reserved</div>
+            <div class="col-md-2 d-none d-md-block">Reserved</div>
         </div>
         <div class="main row">
             <div class="col-md-4 col-sm-12 col-12">Login</div>
