--- a/responsive-web/6.Responsive-Web.html
+++ b/responsive-web/6.Responsive-Web.html
@@ -84,53 +84,62 @@
         </div>
     </div>
     <div>
-        <button type="button"style="width: 100%;" 
-        class="btn btn-info btn-lg">상세정보</button>
+        <button type="button" style="width: 100%;" 
+        class="btn btn-info btn-lg" data-bs-toggle="collapse"
+        data-bs-target="#detail-info">상세정보</button>
+    </div>
+    <br>
+    <!--
+    1. div class="collapse"로 숨기고 싶은 부분 감싸기
+    id도 필수로 설정
+    2. button에 data-bs-toggle="collapsse", data-bs-target="#detail-info" 설정
+    -->
+    <div class="collapse" id="detail-info">
+        <div class="row">
+            <div class="col-md-6 col-12">
+                <img src="./img/PC_Page.png" alt="pcpage" class="detail-img">
+            </div>
+            <div class="col-md-6 col-12">
+                <h3>PC페이지</h3>
+                <p>PC 화면 크기 최적화</p>
+                <p>크로스 브라우징 지원</p>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-6 col-12">
+                <img src="./img/mobile.png" alt="mobile" class="detail-img">
+            </div>
+            <div class="col-md-6 col-12">
+                <h3>모바일 페이지</h3>
+                <p>어느 화면에서든지 작동함</p>
+                <p>깔끔하고 빠르게 개발 가능</p>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-6 col-12">
+                <img src="./img/responsiveweb.jpeg" alt="responsibleweb" class="detail-img">
+            </div>
+            <div class="col-md-6 col-12">
+                <h3>유지보수</h3>
+                <p>한번 서비스는 영원한 서비스</p>
+                <p>장애 0%, 고장 0%</p>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-6 col-12">
+                <img src="./img/secure_coding.jpg" alt="secure" class="detail-img">
+            </div>
+            <div class="col-md-6 col-12">
+                <h3>시큐어 코딩 해드림</h3>
+                <p>뚫릴 수도 있지만 최대한 해드림</p>
+                <p>해커가 오면 뚫릴수도 있음</p>
+            </div>
+        </div>
     </div>
     <hr>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="./img/PC_Page.png" alt="pcpage" class="detail-img">
-        </div>
-        <div class="col-md-6">
-            <h3>PC페이지</h3>
-            <p>PC 화면 크기 최적화</p>
-            <p>크로스 브라우징 지원</p>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="./img/mobile.png" alt="" class="detail-img">
-        </div>
-        <div class="col-md-6">
-            <h3>모바일 페이지</h3>
-            <p>어느 화면에서든지 작동함</p>
-            <p>깔끔하고 빠르게 개발 가능</p>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="./img/responsiveweb.jpeg" alt="" class="detail-img">
-        </div>
-        <div class="col-md-6">
-            <h3>유지보수</h3>
-            <p>한번 서비스는 영원한 서비스</p>
-            <p>장애 0%, 고장 0%</p>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="./img/secure_coding.jpg" alt="" class="detail-img">
-        </div>
-        <div class="col-md-6">
-            <h3>시큐어 코딩 해드림</h3>
-            <p>뚫릴 수도 있지만 최대한 해드림</p>
-            <p>해커가 오면 뚫릴수도 있음</p>
-        </div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
