modified:   responsive-web/7.Carousel_Slide.html

--- a/responsive-web/7.Carousel_Slide.html
+++ b/responsive-web/7.Carousel_Slide.html
@@ -28,11 +28,12 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <button class="btn btn-primary btn-sm" type="button"
+    <br>
+    <button class="btn btn-primary btn-sm" type="button" style="width: 200px;"
         data-bs-target="#carouselExample" data-bs-slide="prev">
         이전
     </button>
-    <button class="btn btn-danger btn-sm" type="button" 
+    <button class="btn btn-danger btn-sm" type="button" style="width: 200px;"
     data-bs-target="#carouselExample" data-bs-slide="next">
         다음
     </button>
