modified:   css_exercise/11.2dTransform.html 	modified:   css_exercise/12.transitionStyle.html 	modified:   css_exercise/2.selector2.html 	modified:   css_exercise/css.layout/2.second-layout.html 	modified:   css_exercise/css.layout/3.header-layout.html 	modified:   css_exercise/css.layout/4.navi-layout.html 	modified:   css_exercise/css.layout/5.login-layout.html

--- a/css_exercise/11.2dTransform.html
+++ b/css_exercise/11.2dTransform.html
@@ -44,24 +44,24 @@
 <body>
         <h1>2차원 변형</h1>
         <h3>좌우로 움직이기</h3>
-        <img src="./css.layout/img/img/flower1.PNG" class="trans1">
+        <img src="./img/flower1.PNG" class="trans1">
         <h3>위아래로 움직이기</h3>
-        <img src="./css.layout/img/img/flower2.PNG" class="trans2">
+        <img src="./img/flower2.PNG" class="trans2">
         <h3>대각선으로 움직이기</h3>
-        <img src="./css.layout/img/img/flower3.PNG" class="trans3">
+        <img src="./img/flower3.PNG" class="trans3">
         <h3>가로로 확대 축소</h3>
-        <img src="./css.layout/img/img/flower4.PNG" class="trans4">
+        <img src="./img/flower4.PNG" class="trans4">
         <h3>세로로 확대 축소</h3>
-        <img src="./css.layout/img/img/flower5.PNG" class="trans5">
+        <img src="./img/flower5.PNG" class="trans5">
         <h3>전체 확대 축소</h3>
-        <img src="./css.layout/img/img/river1.PNG" class="trans6">
+        <img src="./img/river1.PNG" class="trans6">
         <h3>지정한 각도만큼 회전</h3>
-        <img src="./css.layout/img/img/river2.PNG" class="trans7">
+        <img src="./img/river2.PNG" class="trans7">
         <h3>지정한 각도만큼 가로로 뒤틀기</h3>
-        <img src="./css.layout/img/img/city1.PNG" class="trans8">
+        <img src="./img/city1.PNG" class="trans8">
         <h3>지정한 각도만큼 세로로 뒤틀기</h3>
-        <img src="./css.layout/img/img/tower1.PNG" class="trans9">
+        <img src="./img/tower1.PNG" class="trans9">
         <h3>지정한 각도만큼 전체 뒤틀기</h3>
-        <img src="./css.layout/img/img/forest1.PNG" class="trans10">
+        <img src="./img/forest1.PNG" class="trans10">
 </body>
 </html>
