--- a/css_exercise/css.layout/4.navi-layout.html
+++ b/css_exercise/css.layout/4.navi-layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigator 영역</title>
-    <link rel="stylesheet" href="../css/4.navigater.css">
+    <link rel="stylesheet" href="./css/4.navi-layout.css">
 </head>
 <body>
     <div id="container">
