--- a/css_exercise/css.layout/2.second-layout.html
+++ b/css_exercise/css.layout/2.second-layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3단 레이아웃</title>
-    <link rel="stylesheet" href="../css/2.second-layout.css">
+    <link rel="stylesheet" href="./css/2.second-layout.css">
 </head>
 <body>
     <div id="header"></div>
