--- a/css_exercise/css.layout/3.header-layout.html
+++ b/css_exercise/css.layout/3.header-layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>헤더 레이아웃 만들기</title>
-    <link rel="stylesheet" href="../css/3.header-layout.css">
+    <link rel="stylesheet" href="./css/3.header-layout.css">
 </head>
 <body>
     <div id="header">
