--- a/css_exercise/css.layout/5.login-layout.html
+++ b/css_exercise/css.layout/5.login-layout.html
@@ -15,6 +15,9 @@
             margin: 0;
             padding: 0;
         }
+        a {
+            margin: 10px;
+        }
         .login {
             width: 300px;
         }
