--- a/css_exercise/3.textStyle.html
+++ b/css_exercise/3.textStyle.html
@@ -6,7 +6,7 @@
         <title>글꼴 관련 스타일</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Jersey+25+Charted&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet">
         <style>
             #ff1 {
                 font-family: 궁서체;
@@ -18,7 +18,7 @@
                 font-family: 굴림체;
             }
             #web-font {
-                font-family: "Jersey 25 Charted", sans-serif;
+                font-family: "Merienda", cursive;
             }
             /* 
                 CSS 단위 구성
