--- a/css_exercise/css.layout/6.Final-layout.html
+++ b/css_exercise/css.layout/6.Final-layout.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인 폼 복습</title>
-    <link rel="stylesheet" href="../css/6.final-layout.css">
+    <link rel="stylesheet" href="./css/6.final-layout.css">
 </head>
 <body>
+    <div id="container">
     <div class="header">
         <div class="header-layer1">LOGO</div>
         <div class="header-layer2">TITLE</div>
@@ -42,5 +43,6 @@
         </div>
     </div>
     <div class="footer">FOOTER</div>
+    </div>
 </body>
 </html>
