--- a/css_exercise/13.animationStyle.html
+++ b/css_exercise/13.animationStyle.html
@@ -13,6 +13,7 @@
             background-color: salmon;
             animation-name: transAni;
             animation-duration: 5s;
+            animation-iteration-count: infinite;
         }
         @keyframes transAni {
             0% {
