--- a/css_exercise/css.layout/8.nav-practice.html
+++ b/css_exercise/css.layout/8.nav-practice.html
@@ -8,8 +8,8 @@
         ul {
             /* 패딩 o 대신 list-style-type none을 넣어 불릿기호 없앰 */
             list-style-type: none;
-            margin: 0;
-            padding: 0;
+            --margin: 0;
+            --padding: 0;
         }
         ul li {
             width: 25%;
